src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Care Management</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Utilization Management</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Authorization_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorization Id</label>
        <referenceTo>Authorization__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CM_Template__c</fullName>
        <label>Select Care Management Template</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heart Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stroke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CPI_Completed_date__c</fullName>
        <label>CPI Completed date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Queue__c</fullName>
        <formula>Owner:Queue.QueueName</formula>
        <label>Case Queue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Id__c</fullName>
        <description>Category of the particular case</description>
        <label>Category Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Case_Duration_Hours__c</fullName>
        <label>DB Case Duration Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Hours__c</fullName>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <label>DB Hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateTime_Closed_c__c</fullName>
        <label>DateTime Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime_Opened_c__c</fullName>
        <label>DateTime Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disclaimer_Type__c</fullName>
        <description>The case is standard or modified disclaimer</description>
        <label>Disclaimer Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_Description__c</fullName>
        <label>Old Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_Subject__c</fullName>
        <label>Old Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency__c</fullName>
        <description>Case Type Details-Urgent,Non Urgent and Retro</description>
        <label>Emergency</label>
        <picklist>
            <picklistValues>
                <fullName>Urgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Urgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ICM_Program_Type__c</fullName>
        <label>ICM Program Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ILTCI_assessment_completed_date__c</fullName>
        <label>ILTCI assessment completed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ILTCM_Outreach_attempt_count__c</fullName>
        <label>ILTCM Outreach attempt count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ILTCM_Program_Type__c</fullName>
        <label>ILTCM Program Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Outreach_completed_date__c</fullName>
        <label>Initial Outreach completed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IntStatus__c</fullName>
        <description>Internal Status - based on which Assignment rules will run</description>
        <label>IntStatus</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approve - Dont Send Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Prior Auth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Additional Info.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete SRF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denial Coordinator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Intervention__c</fullName>
        <label>Intervention</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Eportal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Particular is Eportal or not</description>
        <label>Is Eportal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Linked_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Particular case is linked with other case or not</description>
        <label>Linked Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Entity_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member Entity Id</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ORGCUSTOM4_DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ORGCUSTOM4_DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Org_Cust_Case_ID__c</fullName>
        <label>Org Cust Case ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outreach_attempt_count__c</fullName>
        <label>Outreach attempt count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outreach_completed_date__c</fullName>
        <label>Outreach completed date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Primary_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>casestouserPO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provider_Entity_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Entity Id</label>
        <referenceTo>Provider__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RAGStatus__c</fullName>
        <formula>IF (Time_Remaining__c &gt; 3,(IMAGE(&quot;https://c.cs41.visual.force.com/resource/1294667510000/Green&quot;,&quot;&quot;,25,25)),(IF (AND (Time_Remaining__c &gt; 0,Time_Remaining__c &lt;3),(IMAGE(&quot;https://c.cs41.visual.force.com/resource/1294667510000/Amber&quot;,&quot;&quot;,25,25)),(IF (Time_Remaining__c &lt; 0,(IMAGE(&quot;https://c.cs41.visual.force.com/resource/1294667510000/Red&quot;,&quot;&quot;,25,25)),&quot;&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Status__c</fullName>
        <formula>IF (Time_Remaining__c &gt; 24,&quot;In SLA&quot;,(IF (AND (Time_Remaining__c &gt; 0,Time_Remaining__c &lt;24),&quot;Met SLA&quot;,(IF (Time_Remaining__c &lt; 0,&quot;SLA Breach&quot;,&quot;&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRF_Page_Number__c</fullName>
        <description>Page Numbers of the Particular Case</description>
        <label>SRF Page Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>casestouserSO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Split_Case__c</fullName>
        <description>When the cases are splitted into two</description>
        <label>Split Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sps_File_URL__c</fullName>
        <description>URL  for the particular case</description>
        <label>Sps File URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TAT_Date__c</fullName>
        <description>TATDate of the particular case</description>
        <label>TAT Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Remaining__c</fullName>
        <description>Time left for SLA to expire</description>
        <formula>(9-(Now() - CreatedDate))*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Case__c</fullName>
        <label>Type of Case</label>
        <picklist>
            <picklistValues>
                <fullName>UM</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>generateTasks__c</fullName>
        <label>generateTasks</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isEmail_to_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isEmail_to_Case</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Time_Remaining__c</columns>
        <columns>RAGStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases_UM</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Utilization_Management</value>
        </filters>
        <label>All Closed Cases</label>
        <sharedTo>
            <roleAndSubordinatesInternal>UM_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Care_Management_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Care Management</label>
        <queue>Care_Management</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Corporate_Review_Case</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Utilization_Management</value>
        </filters>
        <label>Coordinator Inbox</label>
        <queue>Coordinator_Inbox</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>UM_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Denials_Case</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Utilization_Management</value>
        </filters>
        <label>Denials</label>
        <queue>Denials</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>UM_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Medicare_Case</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Utilization_Management</value>
        </filters>
        <label>Nurse Inbox</label>
        <queue>Nurse_Inbox</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>UM_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
        <sharedTo>
            <role>Nurse</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Prior_Auth_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Time_Remaining__c</columns>
        <columns>RAGStatus__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Utilization_Management</value>
        </filters>
        <label>Imaging Queue</label>
        <queue>Imaging_Queue</queue>
    </listViews>
    <listViews>
        <fullName>Reviews_Case</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Utilization_Management</value>
        </filters>
        <label>Reviews</label>
        <queue>Reviews</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>UM_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>CM_CaseManagement</fullName>
        <active>true</active>
        <businessProcess>Care Management</businessProcess>
        <label>CM_CaseManagement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Utilization_Management</fullName>
        <active>true</active>
        <businessProcess>Utilization Management</businessProcess>
        <label>Utilization Management</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>